--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
     "background": {
         "scripts": ["weather_bg.js"]
     },
+    "content_security_policy": "script-src 'self' https://maps.googleapis.com; object-src 'self'",
     "browser_action": {
         "default_icon": "imgs/weather.png",
         "default_popup": "weather/index.html",
