--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
-    "name": "Weather Extension",
-    "version": "1.0.0",
+    "name": "cityWeather",
+    "version": "1.0.1",
     
     "background": {
         "scripts": ["weather_bg.js"]
